--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 2657
-URI_MONGO = mongodb://127.0.0.1:27017/Portafolio
+URI_MONGO = mongodb+srv://realiquezisaac:2fE4aFLkOcGcsrH3@mongodb101.rphjq0f.mongodb.net/Portafolio
 SECRET_KEY = @LL4V3P4R4PR0Y3CT0B1M3STR4LIN6AMR34L1QU3Z@
